[tool.poetry]
name = "user-management"
version = "0.1.0"
description = ""
authors = ["13dashaa <makushynskaya.darya@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
pydantic-settings = "^2.7.0"
sqlalchemy = "^2.0.36"
python-jose = "^3.3.0"
passlib = "^1.7.4"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
